test/LitTests/SemanticAnalysis/Defaults/DefaultMethodMustBeStatic.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: default method 'TestClass::create' must be static
	create = default;
}

// CHECK: 1 error generated.
